assets/constructor.css
@font-face {
    font-family: "ITC Galliard Std";
    src: url('./GalliardStd-Italic.ttf')  format('truetype');
    font-weight: 400;
    font-style: italic;
    font-display: swap;
}

#step-0 {
    /*display: none;*/
}

#step-1 {
    display: none;
}

#step-2 {
    display: none;
}

#step-3 {
    display: none;
}

.constructor-loading {
    opacity: .4;
    pointer-events: none;
}


#constructor .main-content {
    display: flex;
}

#constructor .footer-sections {
    display: none;
}

#daphine-jewellery-charm-bar {

}

#daphine-jewellery-charm-bar .main-content {
    display: flex;
}

#daphine-jewellery-charm-bar .footer-sections {
    display: none;
}

.constructor-section {
    flex-grow: 1;
}

.constructor {
    display: flex;
    min-height: 100%;
    width: 100%;
}

@media (min-width: 1280px) {
    .constructor {
        min-height: 100%;
    }
}

.constructor-wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100%;
    width: 100%;
    flex-grow: 1;
}

@media (min-width: 820px) {
    .constructor-wrapper {
    }
}

@media (min-width: 1024px) {
    .constructor-wrapper {
    }
}

@media (min-width: 1280px) {
    .constructor-wrapper {
        flex-direction: row;
    }
}

.constructor-col {
    min-height: 50%;
    width: 100%;
}

@media (min-width: 1280px) {
    .constructor-col {
        min-height: unset;
        width: 50%;
    }
}

.constructor-result {
    position: relative;
    background: #F5F3EF;
    min-height: 100%;
    overflow: hidden;
}

.constructor-result-chain-example {
    position: absolute;
    width: 864px;
    height: 1022px;
    bottom: -748px;
    left: 50%;
    transform: translate(-50%, -50%);
    pointer-events: none;
}

@media (min-width: 820px) {
    .constructor-result-chain-example {
        bottom: -680px;
    }
}

@media (min-width: 820px) {
    .constructor-result-chain-example {
        bottom: -680px;
    }
}

@media (min-width: 1024px) {
    .constructor-result-chain-example {
        bottom: -680px;
    }
}

.constructor-result-chain {
    position: absolute;
    width: 864px;
    height: 1022px;
    bottom: -560px;
    left: 50%;
    transform: translate(-50%, -50%);
    pointer-events: none;
}

@media (min-width: 820px) {
    .constructor-result-chain {
        bottom: -560px;
    }
}

@media (min-width: 1024px) {
    .constructor-result-chain {
        bottom: -540px;
    }
}

.constructor-result-chain_hidden {
    display: none;
}

.constructor-result-charm-example {
    position: absolute;
    width: 340px;
    height: 340px;
    bottom: -232px;
    left: 50%;
    transform: translate(-50%, -50%);
}

@media (min-width: 820px) {
    .constructor-result-charm-example {
        bottom: -170px;
    }
}

@media (min-width: 1024px) {
    .constructor-result-charm-example {
        bottom: -165px;
    }
}

.constructor-result-charms {
    position: absolute;
    width: 340px;
    height: 340px;
    bottom: -155px;
    left: 50%;
    transform: translate(-50%, -50%);
}

@media (min-width: 820px) {
    .constructor-result-charms {
        bottom: -157px;
    }
}

@media (min-width: 1024px) {
    .constructor-result-charms {
        bottom: -128px;
    }
}

.constructor-result-charms-templates {
    display: none;
}

.constructor-result-charm {
    position: absolute;
    width: 340px;
    height: 340px;
    top: 0;
    left: 0;

    transform-origin: 170px 50px;
    z-index: 2;
}

.constructor-result-charm:not(.constructor-result-chain_hidden):nth-child(2) {
    transform: rotate(30DEG);
    z-index: 1;
}

.constructor-result-charm:not(.constructor-result-chain_hidden):nth-child(3) {
    transform: rotate(-30DEG);
    z-index: 3;
}

.constructor-result-charms-2 .constructor-result-charm:nth-child(1) {
    left: -30px;
    transform: rotate(20DEG);
}

.constructor-result-charms-2 .constructor-result-charm:nth-child(2) {
    right: -20px;
    left: unset;
    transform: rotate(-20DEG);
}

.constructor-result-charms-3 .constructor-result-charm:nth-child(1) {
    top: -10px;
    left: -30px;
    transform: rotate(20DEG);
}

.constructor-result-charms-3 .constructor-result-charm:nth-child(2) {
    top: -10px;
    right: -20px;
    left: unset;
    transform: rotate(-20DEG);
}

.constructor-result-charms-3 .constructor-result-charm:nth-child(3) {
    z-index: 3;
    transform: rotate(0DEG);
}



.constructor-result-charm_hidden {
    display: none;
}

.constructor-result-title {
    display: none;
    position: absolute;
    top: 50px;
    left: 0;
    right: 0;
    margin: auto;
    color: #000;
    text-align: center;
    font-family: "ITC Galliard Std";
    font-size: 18px;
    font-style: italic;
    font-weight: 400;
    line-height: 18px;
}

@media (min-width: 820px) {
    .constructor-result-title {
        display: block;
    }
}

.constructor-result-header-mobile {
    position: relative;
    z-index: 8;
    background-color: #fff;
    padding: 45px 0 24px;
}

@media (min-width: 820px) {
    .constructor-result-header-mobile {
        display: none;
    }
}

.constructor-start {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.constructor-start-subtitle {
    color: #000;
    text-align: center;
    font-family: Montserrat;
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    line-height: 13px;
    letter-spacing: 1.3px;
    text-transform: uppercase;

    margin-bottom: 24px;
}

.constructor-start-title {
    color: #000;
    text-align: center;
    font-family: "ITC Galliard Std";
    font-size: 32px;
    font-style: italic;
    font-weight: 400;
    line-height: 32px;

    margin-bottom: 32px;
}
/* ... */

